# phone-copy-paste

./: .gitignore
.github/workflows/: build.yml
phone-copy-paste-app/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
phone-copy-paste-app/android/app/: build.gradle.kts
phone-copy-paste-app/android/app/src/main/: AndroidManifest.xml
phone-copy-paste-app/android/app/src/main/kotlin/com/phonepaste/phone_copy_paste_app/: MainActivity.kt
phone-copy-paste-app/ios/Runner/: Info.plist
phone-copy-paste-app/ios/Runner.xcodeproj/: project.pbxproj
phone-copy-paste-app/lib/: connection_manager.dart  home_screen.dart  main.dart  protocol.dart  received_text.dart
phone-copy-paste-app/test/: protocol_test.dart
phone-copy-paste-server/: CHANGELOG.md  Cargo.toml  README.md
phone-copy-paste-server/src/: main.rs  protocol.rs  server.rs  tray.rs  ui.rs
