[package]
name = "phone-copy-paste-server"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9"
if-addrs = "0.13"
mdns-sd = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.19"
muda = "0.16"
